--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1', '3.2']
+        ruby: ['3.0', '3.1', '3.2']
     runs-on: ubuntu-latest
 
     steps:
@@ -37,4 +37,4 @@ jobs:
         uses: coverallsapp/github-action@v2
         with:
           parallel-finished: true
-          carryforward: "ruby-2.7,ruby-3.0,ruby-3.1,ruby-3.2"
+          carryforward: "ruby-3.0,ruby-3.1,ruby-3.2"
